modified chart queries to work around the issue described in https://support.servoy.com/browse/SVY-11480 added usage over time chart on tenant detail page tweaked the css to avoid the horizontal scroll bar when page content requires vertical scrolling

--- a/svySecurityConsole/medias/security-console.css
+++ b/svySecurityConsole/medias/security-console.css
@@ -13,7 +13,7 @@ body
 }
 .body_main
 {
-	width: 800px;
+	width: 820px;
     margin-left: auto;
     margin-right: auto;
 	background-color: #f0f0f0;	
